[gd_scene load_steps=19 format=2]

[ext_resource path="res://Managers/CharacterManager.gd" type="Script" id=1]
[ext_resource path="res://UI/Menus/GameEndScreen.gd" type="Script" id=2]
[ext_resource path="res://Managers/ClientActionManager.gd" type="Script" id=3]
[ext_resource path="res://UI/SoundButton.gd" type="Script" id=4]
[ext_resource path="res://Managers/ClientGhostManager.gd" type="Script" id=5]
[ext_resource path="res://Managers/GameManager.gd" type="Script" id=6]
[ext_resource path="res://Shared/RoundManager.gd" type="Script" id=7]
[ext_resource path="res://Managers/VisibilityChecker.gd" type="Script" id=8]
[ext_resource path="res://UI/CountdownScreen.tscn" type="PackedScene" id=9]
[ext_resource path="res://World.gd" type="Script" id=10]
[ext_resource path="res://UI/Menus/StatsUI.tscn" type="PackedScene" id=11]
[ext_resource path="res://Resources/Fonts/FiraCode-Regular.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://UI/StyleBoxFlat.tres" type="StyleBox" id=13]

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0, 0, 0, 0.54902 )

[sub_resource type="DynamicFont" id=1]
resource_local_to_scene = true
size = 26
use_mipmaps = true
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )
Button/styles/focus = ExtResource( 13 )
LineEdit/styles/focus = ExtResource( 13 )
TextEdit/styles/focus = ExtResource( 13 )

[sub_resource type="DynamicFont" id=3]
resource_local_to_scene = true
size = 50
use_mipmaps = true
use_filter = true
font_data = ExtResource( 12 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )
Button/styles/focus = ExtResource( 13 )
LineEdit/styles/focus = ExtResource( 13 )
TextEdit/styles/focus = ExtResource( 13 )

[node name="World" type="Spatial"]
script = ExtResource( 10 )

[node name="CharacterManager" type="Node" parent="."]
script = ExtResource( 1 )

[node name="ActionManager" type="Node" parent="CharacterManager"]
script = ExtResource( 3 )

[node name="GameManager" type="Node" parent="CharacterManager"]
script = ExtResource( 6 )

[node name="RoundManager" type="Node" parent="CharacterManager"]
script = ExtResource( 7 )

[node name="GhostManager" type="Node" parent="CharacterManager"]
script = ExtResource( 5 )

[node name="VisibilityChecker" type="Node" parent="CharacterManager"]
script = ExtResource( 8 )

[node name="CountdownScreen" parent="." instance=ExtResource( 9 )]
visible = false

[node name="GameEndScreen" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameEndScreenContainer" type="PanelContainer" parent="GameEndScreen"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 850, 500 )
theme = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ElementsList" type="VBoxContainer" parent="GameEndScreen/GameEndScreenContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 843.0
margin_bottom = 493.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="GameEndScreen/GameEndScreenContainer/ElementsList"]
margin_right = 836.0
margin_bottom = 63.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme = SubResource( 4 )
text = "Title"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleBackgroundPanel" type="Panel" parent="GameEndScreen/GameEndScreenContainer/ElementsList/Title"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Space1" type="Control" parent="GameEndScreen/GameEndScreenContainer/ElementsList"]
margin_top = 67.0
margin_right = 836.0
margin_bottom = 87.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="PlayerKillStats" parent="GameEndScreen/GameEndScreenContainer/ElementsList" instance=ExtResource( 11 )]
margin_top = 91.0
margin_right = 836.0
margin_bottom = 159.0

[node name="Space2" type="Control" parent="GameEndScreen/GameEndScreenContainer/ElementsList"]
margin_top = 163.0
margin_right = 836.0
margin_bottom = 173.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerDeathStats" parent="GameEndScreen/GameEndScreenContainer/ElementsList" instance=ExtResource( 11 )]
margin_top = 177.0
margin_right = 836.0
margin_bottom = 245.0

[node name="Space3" type="Control" parent="GameEndScreen/GameEndScreenContainer/ElementsList"]
margin_top = 249.0
margin_right = 836.0
margin_bottom = 259.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GhostKillStats" parent="GameEndScreen/GameEndScreenContainer/ElementsList" instance=ExtResource( 11 )]
margin_top = 263.0
margin_right = 836.0
margin_bottom = 331.0

[node name="Space4" type="Control" parent="GameEndScreen/GameEndScreenContainer/ElementsList"]
margin_top = 335.0
margin_right = 836.0
margin_bottom = 345.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GhostDeathStats" parent="GameEndScreen/GameEndScreenContainer/ElementsList" instance=ExtResource( 11 )]
margin_top = 349.0
margin_right = 836.0
margin_bottom = 417.0

[node name="Space5" type="Control" parent="GameEndScreen/GameEndScreenContainer/ElementsList"]
margin_top = 421.0
margin_right = 836.0
margin_bottom = 441.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Buttons" type="HBoxContainer" parent="GameEndScreen/GameEndScreenContainer/ElementsList"]
margin_top = 445.0
margin_right = 836.0
margin_bottom = 486.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="BackToTitleButton" type="Button" parent="GameEndScreen/GameEndScreenContainer/ElementsList/Buttons"]
margin_right = 276.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Back to Title"
script = ExtResource( 4 )

[node name="Space" type="Control" parent="GameEndScreen/GameEndScreenContainer/ElementsList/Buttons"]
margin_left = 280.0
margin_right = 556.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BackToRoomButton" type="Button" parent="GameEndScreen/GameEndScreenContainer/ElementsList/Buttons"]
margin_left = 560.0
margin_right = 836.0
margin_bottom = 41.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Back to Room"
script = ExtResource( 4 )
